@@ -97,6 +97,10 @@ Extensions
 Other Changes
 =============
 
+* Fix false negative ``consider-iterating-dictionary`` during membership checks
+
+  Closes #5323
+
 * Fix ``install graphiz`` message which isn't needed for puml output format.
 
 * ``pylint`` no longer crashes when checking assignment expressions within if-statements
