@@ -1,18 +1,22 @@
-consider-iterating-dictionary:25:16:25:25::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:26:16:26:25::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:27:16:27:25::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:28:21:28:30::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:29:24:29:33::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:30:24:30:33::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:31:24:31:33::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:32:29:32:38::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:33:11:33:20::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:38:24:38:35::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:38:55:38:66::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:39:31:39:42::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:39:61:39:72::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:40:30:40:41::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:40:60:40:71::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:43:8:43:21::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:45:8:45:17::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
-consider-iterating-dictionary:65:11:65:20::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:25:16:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:26:16:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:27:16:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:28:21:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:29:24:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:30:24:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:31:24:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:32:29:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:33:11:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:38:24:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:38:55:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:39:31:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:39:61:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:40:30:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:40:60:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:43:8:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:45:8:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:65:11:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:73:14:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:75:14:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:77:10:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
+consider-iterating-dictionary:79:10:None:None::Consider iterating the dictionary directly instead of calling .keys():UNDEFINED
